--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Bemdopps</title>
   </head>
   <body>
-    <nav class="navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar-expand-sm navbar-light bg-light">
       <div class="container-fluid">
         <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
 
