links section update

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <title>Bemdopps</title>
   </head>
   <body>
+
+    <!--Start Navbar-->
     <nav class="navbar-expand-sm navbar-light bg-light">
       <div class="container-fluid">
         <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
@@ -49,7 +51,62 @@
         <!-- </div> -->
       </div>
     </nav>
-
+   <!--End of Navbar--> 
+    
+    
+	<!-- Start Links Area -->
+  <section class="links-area">
+      <div class="row justify-content-center">
+        <div class="col-sm-2">
+          <div class="section-title text-left">
+            <h3>Bemdopps</h3>
+          </div>
+        </div>
+        <div class="col-sm-2">
+          <div>
+            <p><h5>Company</h5></p>
+            <li>About Us</li>
+            <li>Our Team</li>
+            <li>Products</li>
+            <li>Contact</li>							
+          </div>
+        </div>
+        <div class="col-sm-2">
+          <div>
+            <p><h5>Product</h5></p>
+            <li>Feature</li>
+            <li>Pricing</li>
+            <li>Credit</li>
+            <li>FAQ</li>
+          </div>
+        </div>
+        <div class="col-sm-2">
+          <div>
+            <p><h5>Download</h5></p>
+            <li>iOS</li>
+            <li>Android</li>
+            <li>Microsoft</li>
+            <li>Desktop</li>							
+          </div>
+        </div>
+        <div class="col-sm-2">
+          <div>
+            <li>Support</li>
+            <li>Privacy</li>
+            <li>Help</li>
+            <li>Terms</li>
+            <li>FAQ</li>
+          </div>
+      </div>
+    </section>
+  <!-- End Link Area -->
+  
+  <!--Copyright area-->
+<section>
+  <div class="row justify-content-center"
+     class="copy-right-text">Copyright &copy; 2022  |  All rights reserved to MeshOptics inc. </>
+  </div>  
+</section>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
