--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <section>
         <!--Start Navbar-->
         <nav class="navbar-expand-sm navbar-light bg-light">
-          <div class="container-fluid">
-            <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
+          <div class="container-fluid"style ="background-color:rgb(11, 10, 117);">
+                    <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
             <ul class="nav justify-content-center">
               <img src="images/color logo.png" alt=""style="width:190px;height:40px;">
               <button
@@ -31,6 +31,7 @@
                 aria-controls="navbarSupportedContent"
                 aria-expanded="false"
                 aria-label="Toggle navigation"
+                text-color="white"
               >
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -114,6 +115,7 @@
             <li>Terms</li>
             <li>FAQ</li>
           </div>
+        </div>
       </div>
     </section>
      <!-- End Link Area -->
