--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
   <body>
     <section>
         <!--Start Navbar-->
-        <nav class="navbar-expand-sm navbar-light bg-light">
+        <nav class="navbar-expand-sm navbar-light-bg-light">
           <div class="container-fluid"style ="background-color:rgb(11, 10, 117);">
-                    <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
+            <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
+            <!--<div class="row justify-content-left">
+            <img src="images/color logo.png" alt=""style="width:190px;height:40px;">-->
             <ul class="nav justify-content-center">
               <img src="images/color logo.png" alt=""style="width:190px;height:40px;">
               <button
@@ -33,7 +35,7 @@
                 aria-label="Toggle navigation"
                 text-color="white"
               >
-                <span class="navbar-toggler-icon"></span>
+                <!--span class="navbar-toggler-icon"></!--span-->
               </button>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -58,13 +60,13 @@
     <div class="row justify-content-center">
       <div class="col-sm-2">
          <div>
-           <p><h2>We craft <br>digital<br>products</h2></p>
-           <p>Lorem ipsum dolor sit amet consec-<br>sed repellat quos minus...</p>						
+           <p><h1>We craft <br>digital<br>products</h1></p>
+           <p>Lorem ipsum dolor sit amet <br>consec sed repellat quos minus...</p>						
         </div>
        </div>
-       <div class="col-sm-2">
-        <div class="section-title text-left">
-          <img src="images/laptop image.png" alt=""style="width: 500px;height:290px;">
+       <div class="col-sm-5">
+        <div class="section-title text-right">
+          <img src="images/laptop image.png" alt=""style="width: 900px;height:500px;">
        </div>
      </div>
       
