minor update to index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <section>
         <!--Start Navbar-->
-        <nav class="navbar-expand-sm navbar-light-bg-light">
+        <nav class="navbar-expand-lg navbar-light-bg-light">
           <div class="container-fluid"style ="background-color:rgb(11, 10, 117);">
             <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
             <!--<div class="row justify-content-left">
@@ -111,7 +111,7 @@
         </div>
         <div class="col-sm-2">
           <div>
-            <li><h5>Support</h5></li>
+            <p><h5>Support</h5></p>
             <li>Privacy</li>
             <li>Help</li>
             <li>Terms</li>
@@ -125,7 +125,8 @@
       <!--Copyright area-->
     <section>
       <div class="row justify-content-center"
-        class="copy-right-text">Copyright &copy; 2022  |  All rights reserved to MeshOptics inc. </>
+          class="copy-right-text">Copyright &copy; 2022  |  All rights reserved to MeshOptics inc. </div>
+        </div>
       </div>  
     </section>
     </section>
