full skeletal structure of index.html done

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
             <!--<div class="row justify-content-left">
             <img src="images/color logo.png" alt=""style="width:190px;height:40px;">-->
-            <ul class="nav justify-content-center">
-              <img src="images/color logo.png" alt=""style="width:190px;height:40px;">
+            <ul class="nav container-fluid justify-content-center">
+              <img src="images/color logo.png" class="img-fluid" alt="..."style="width:190px;height:40px;">
               <button
                 class="navbar-toggler"
                 type="button"
@@ -56,27 +56,99 @@
     <!--End of Navbar--> 
 
     <!--Start of Digital Produucts Area-->
-  <section class="links-area">
+  <section class="digital products area">
     <div class="row justify-content-center">
       <div class="col-sm-2">
          <div>
+           <style>
+             h1 {
+                 font-size: 400%; // makes font bigger on 50% 
+              }
+           </style>
            <p><h1>We craft <br>digital<br>products</h1></p>
-           <p>Lorem ipsum dolor sit amet <br>consec sed repellat quos minus...</p>						
+           <p>Lorem ipsum dolor sit amet <br>consec sed repellat quos minus...</p>	
+          <button type="button" class="btn btn-primary btn-lg">Read More</button>
         </div>
        </div>
        <div class="col-sm-5">
         <div class="section-title text-right">
-          <img src="images/laptop image.png" alt=""style="width: 900px;height:500px;">
+          <img src="images/laptop image.png" class="img-fluid" alt="...">
        </div>
      </div>
-      
     </div> 
+    <div>
+      <h2>
+        <p class="container-fluid text-center">Trusted by 3,000+ companies worldwide</p>
+      </h2>
+    </div>
   </section>
     <!--End Of Digital Produucts Area-->
+<div>
+  <div class="row justify-content-center">
+  <img src="images/Group 34.png" class="img-fluid" alt="...">
+</div>
+
+<!--Start of Why Choose Us Area-->
+<section class="container-fluid">
+  <div class="container-fluid row justify-content-center">
+    <div class="header-text text-center">
+      <p><h1>Why Choose Us</h1></p>
+    </div>
+    <div class="col-sm-2">
+      <img src="images/why choose us.png" class="img-fluid" alt="">
+    </div>
+    <div class="col-sm-5">
+      <div class="section-title text-right">
+        <p<p class="text-primary"><h1>A family of <br>digital creators</h1></p>
+        
+        <p class="text-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque alias recusandae nulla nihil sed saepe dolore explicabo tempore impedit. Odio, eveniet? Quasi adipisci obcaecati iure! Voluptatem laudantium vel quae nemo..</p>	
+      </div>
+    </div>
+  </div>
+</section>
+
+<!--End of Why Choose Us Area-->
+
+<!--Start of Our Team Area-->
+<section class="container-fluid">
+  <div class="row justify-content-center header-text text-center">
+    <h1>Our Team</h1>
+  </div>
+</section>
+<section class="container-fluid">
+  <div class="container-fluid row justify-content-center">
+    <div class="col-sm-2">
+      <div class="section-title text-left">
+        <img src="images/our team.png" alt=""style="">
+        <p><h5>Lorem Ipsum</h5></p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore nam esse, aliquam molestiae quasi, beatae alias quibusdam repellendus tenetur sunt cum nostrum commodi enim soluta at mollitia id deserunt dolores.</p>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <div class="section-title text-left">
+        <img src="images/our team.png" alt=""style="">
+        <p><h5>Lorem Ipsum</h5></p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore nam esse, aliquam molestiae quasi, beatae alias quibusdam repellendus tenetur sunt cum nostrum commodi enim soluta at mollitia id deserunt dolores.</p>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <div class="section-title text-left">
+        <img src="images/our team.png" alt=""style="">
+        <p><h5>Lorem Ipsum</h5></p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore nam esse, aliquam molestiae quasi, beatae alias quibusdam repellendus tenetur sunt cum nostrum commodi enim soluta at mollitia id deserunt dolores.</p>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <div class="section-title text-left">
+        <img src="images/our team.png" alt=""style="">
+        <p><h5>Lorem Ipsum</h5></p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore nam esse, aliquam molestiae quasi, beatae alias quibusdam repellendus tenetur sunt cum nostrum commodi enim soluta at mollitia id deserunt dolores.</p>
+      </div>
+    </div>
 
 	    <!-- Start Links Area -->
-  <section class="links-area">
-      <div class="row justify-content-center">
+  <section class="container-fluid">
+      <div class="container-fluid row justify-content-center">
         <div class="col-sm-2">
           <div class="section-title text-left">
             <img src="images/b:w logo.png" alt=""style="width:190px;height:40px;">
@@ -124,8 +196,8 @@
   
       <!--Copyright area-->
     <section>
-      <div class="row justify-content-center"
-          class="copy-right-text">Copyright &copy; 2022  |  All rights reserved to MeshOptics inc. </div>
+      <div class="container-fluid row justify-content-center"
+          class="copy-right-text">Copyright &copy; 2022  |  All rights reserved to MeshOptics Inc. </div>
         </div>
       </div>  
     </section>
