--- a/index.html
+++ b/index.html
@@ -111,8 +111,6 @@
 </div>
 
 <br>
-<br>
-<br>
 
 <!--Start of Why Choose Us Area-->
 <section class="container-fluid">
@@ -176,6 +174,12 @@
       </div>
     </div>
 
+<!--Start of Our Team Area-->
+
+
+<br>
+<br>
+<br>
 <br>
 <br>
 
@@ -226,7 +230,13 @@
       </div>
     </section>
      <!-- End Link Area -->
-  
+ 
+<br>
+<br>
+<br>
+<br>
+<br>     
+     
       <!--Copyright area-->
     <section>
       <div class="container-fluid row justify-content-center"
