site responsiveness update

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <br>
     <!--Start of Digital Produucts Area-->
   <section class="digital products area">
-    <div class="row justify-content-center">
+    <div class="container-fluid justify-content-center">
       <div class="col-sm-2">
          <div>
            <style>
@@ -106,7 +106,7 @@
     <br>
     
 <div>
-  <div class="row justify-content-center">
+  <div class="container-fluid row justify-content-center">
   <img src="images/Group 34.png" class="img-fluid" alt="...">
 </div>
 
