--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <br>
     <!--Start of Digital Produucts Area-->
   <section class="digital products area">
-    <div class="justify-content-center">
+    <div class="container-fluid row justify-content-center">
       <div class="col-sm-2">
          <div>
            <style>
