--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   </div>
 </section>
 <section class="container-fluid">
-  <div class="container-fluid row justify-content-center">
+  <div class="container-fluid row justify-content-center"> 
     <div class="col-sm-2">
       <div class="section-title text-left">
         <img src="images/our team.png" alt=""style="">
@@ -173,7 +173,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore nam esse, aliquam molestiae quasi, beatae alias quibusdam repellendus tenetur sunt cum nostrum commodi enim soluta at mollitia id deserunt dolores.</p>
       </div>
     </div>
-
+</section>
 <!--Start of Our Team Area-->
 
 
